deployment/kubernetes/generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generator-service
  namespace: default
spec:
  ports:
  - port: 8888
    protocol: TCP
    name: http
  selector:
    app: generator-service
  sessionAffinity: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-service
spec:
  selector:
    matchLabels:
      app: generator-service
  replicas: 2
  template:
    metadata:
      labels:
        app: generator-service
    spec:
      containers:
      - name: generator-service
        image: gcr.io/thumby-workshop-<num>/generator-service:v1
        ports:
        - containerPort: 8888
        args:
        - --gcp.bucket-name=thumby_bucket
