deployment/kubernetes/upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  selector:
    app: upload-service
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
spec:
  selector:
    matchLabels:
      app: upload-service
  replicas: 2
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      containers:
      - name: upload-service
        image: gcr.io/thumby-workshop-<num>/upload-service:v1
        ports:
        - containerPort: 8080
        args:
        - --gcp.bucket-name=thumby_bucket
        - --thumbnail-service.port=8888
        - --thumbnail-service.hostname=generator-service.default
